7066: Keep certain properties configurable between emr and eks