@@ -52,58 +52,6 @@ public interface BulkImportProperty {
             .defaultValue("0.75")
             .propertyGroup(InstancePropertyGroup.BULK_IMPORT)
             .runCdkDeployWhenChanged(true).build();
-    UserDefinedInstanceProperty BULK_IMPORT_SPARK_EXECUTOR_EXTRA_JAVA_OPTIONS = Index.propertyBuilder("sleeper.bulk.import.spark.executor.extra.java.options")
-            .description("JVM options passed to the executors. Used to set spark.executor.extraJavaOptions.\n" +
-                    "See https://spark.apache.org/docs/latest/configuration.html.")
-            .defaultValue(
-                    "-XX:+UseG1GC -XX:+UnlockDiagnosticVMOptions -XX:+G1SummarizeConcMark -XX:InitiatingHeapOccupancyPercent=35 -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:OnOutOfMemoryError='kill -9 %p'")
-            .propertyGroup(InstancePropertyGroup.BULK_IMPORT).build();
-    UserDefinedInstanceProperty BULK_IMPORT_SPARK_DRIVER_EXTRA_JAVA_OPTIONS = Index.propertyBuilder("sleeper.bulk.import.spark.driver.extra.java.options")
-            .description("JVM options passed to the driver. Used to set spark.driver.extraJavaOptions.\n" +
-                    "See https://spark.apache.org/docs/latest/configuration.html.")
-            .defaultValue(BULK_IMPORT_SPARK_EXECUTOR_EXTRA_JAVA_OPTIONS.getDefaultValue())
-            .propertyGroup(InstancePropertyGroup.BULK_IMPORT).build();
-    UserDefinedInstanceProperty BULK_IMPORT_SPARK_EXECUTOR_HEARTBEAT_INTERVAL = Index.propertyBuilder("sleeper.bulk.import.spark.executor.heartbeat.interval")
-            .description("The interval between heartbeats from executors to the driver. Used to set spark.executor.heartbeatInterval.\n" +
-                    "See https://spark.apache.org/docs/latest/configuration.html.")
-            .defaultValue("60s")
-            .propertyGroup(InstancePropertyGroup.BULK_IMPORT).build();
-    UserDefinedInstanceProperty BULK_IMPORT_SPARK_NETWORK_TIMEOUT = Index.propertyBuilder("sleeper.bulk.import.spark.network.timeout")
-            .description("The default timeout for network interactions in Spark. Used to set spark.network.timeout.\n" +
-                    "See https://spark.apache.org/docs/latest/configuration.html.")
-            .defaultValue("800s")
-            .propertyGroup(InstancePropertyGroup.BULK_IMPORT).build();
-    UserDefinedInstanceProperty BULK_IMPORT_SPARK_MEMORY_FRACTION = Index.propertyBuilder("sleeper.bulk.import.spark.memory.fraction")
-            .description("The fraction of heap space used for execution and storage. Used to set spark.memory.fraction.\n" +
-                    "See https://spark.apache.org/docs/latest/configuration.html.")
-            .defaultValue("0.80")
-            .propertyGroup(InstancePropertyGroup.BULK_IMPORT).build();
-    UserDefinedInstanceProperty BULK_IMPORT_SPARK_MEMORY_STORAGE_FRACTION = Index.propertyBuilder("sleeper.bulk.import.spark.memory.storage.fraction")
-            .description("The amount of storage memory immune to eviction, expressed as a fraction of the heap space used for execution and storage. " +
-                    "Used to set spark.memory.storageFraction.\n" +
-                    "See https://spark.apache.org/docs/latest/configuration.html.")
-            .defaultValue("0.30")
-            .propertyGroup(InstancePropertyGroup.BULK_IMPORT).build();
-    UserDefinedInstanceProperty BULK_IMPORT_SPARK_STORAGE_LEVEL = Index.propertyBuilder("sleeper.bulk.import.spark.storage.level")
-            .description("The storage to use for temporary caching. Used to set spark.storage.level.\n" +
-                    "See https://aws.amazon.com/blogs/big-data/best-practices-for-successfully-managing-memory-for-apache-spark-applications-on-amazon-emr/.")
-            .defaultValue("MEMORY_AND_DISK_SER")
-            .propertyGroup(InstancePropertyGroup.BULK_IMPORT).build();
-    UserDefinedInstanceProperty BULK_IMPORT_SPARK_RDD_COMPRESS = Index.propertyBuilder("sleeper.bulk.import.spark.rdd.compress")
-            .description("Whether to compress serialized RDD partitions. Used to set spark.rdd.compress.\n" +
-                    "See https://spark.apache.org/docs/latest/configuration.html.")
-            .defaultValue("true")
-            .propertyGroup(InstancePropertyGroup.BULK_IMPORT).build();
-    UserDefinedInstanceProperty BULK_IMPORT_SPARK_SHUFFLE_COMPRESS = Index.propertyBuilder("sleeper.bulk.import.spark.shuffle.compress")
-            .description("Whether to compress map output files. Used to set spark.shuffle.compress.\n" +
-                    "See https://spark.apache.org/docs/latest/configuration.html.")
-            .defaultValue("true")
-            .propertyGroup(InstancePropertyGroup.BULK_IMPORT).build();
-    UserDefinedInstanceProperty BULK_IMPORT_SPARK_SHUFFLE_SPILL_COMPRESS = Index.propertyBuilder("sleeper.bulk.import.spark.shuffle.spill.compress")
-            .description("Whether to compress data spilled during shuffles. Used to set spark.shuffle.spill.compress.\n" +
-                    "See https://spark.apache.org/docs/latest/configuration.html.")
-            .defaultValue("true")
-            .propertyGroup(InstancePropertyGroup.BULK_IMPORT).build();
     UserDefinedInstanceProperty BULK_IMPORT_STARTER_LAMBDA_MEMORY = Index.propertyBuilder("sleeper.bulk.import.starter.memory.mb")
             .description("The amount of memory in MB for lambda functions that start bulk import jobs.")
             .defaultProperty(DEFAULT_TABLE_STATE_LAMBDA_MEMORY)
